--- a/Course Project Sections/03-CSS-Fundamentals/index.html
+++ b/Course Project Sections/03-CSS-Fundamentals/index.html
@@ -24,7 +24,9 @@
         width="50px"
         height="50px"
       />
-      <p>Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027</p>
+      <p class="author">
+        Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027
+      </p>
       <img
         src="./img/post-img.jpg"
         alt="Cool looking html file page opened in an IDE, specifically VS Code"
@@ -102,7 +104,7 @@
           <a href="https://developer.mozilla.org/en-US/" target="_blank"
             >How to Learn Web Development</a
           >
-          <p>By Jonas Schmedtmann</p>
+          <p class="related-author">By Jonas Schmedtmann</p>
         </li>
         <li>
           <img
@@ -112,7 +114,7 @@
             height="75px"
           />
           <a href="#">The Unknown powers of CCS</a>
-          <p>By Jim Dillon</p>
+          <p class="related-author">By Jim Dillon</p>
         </li>
         <li>
           <img
@@ -122,7 +124,7 @@
             height="75px"
           />
           <a href="#">Why JavaScript is Awesome</a>
-          <p>By Matilda</p>
+          <p class="related-author">By Matilda</p>
         </li>
       </ul>
     </aside>
