--- a/Course Project Sections/03-CSS-Fundamentals/component e-commerce store mini project/shoesComponent.html
+++ b/Course Project Sections/03-CSS-Fundamentals/component e-commerce store mini project/shoesComponent.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./shoesStyle.css" />
     <title>Shoes</title>
   </head>
   <body>
-    <article>
+    <article class="product">
       <header>
         <h2>Converse Chuck Taylor All Star Low Top</h2>
         <img
@@ -16,20 +17,20 @@
           width="250px"
           height="250px"
         />
-        <p><strong>&#36;65.00</strong></p>
+        <p><strong class="price">&#36;65.00</strong></p>
       </header>
 
-      <p>Free shipping</p>
+      <p class="shipping">Free shipping</p>
       <p>
         Ready to dress up or down, these classic canvas Chucks are an everyday
         wardrobe staple.
       </p>
-      <a href="#">More information&rarr;</a>
+      <a class="more-info" href="#">More information&rarr;</a>
 
       <aside>
-        <h3>Product details</h3>
+        <h3 class="details-title">Product details</h3>
 
-        <ul>
+        <ul class="details-list">
           <li>Lightweight, durable canvas sneaker</li>
           <li>Lightly padded footbed for added comfort</li>
           <li>Iconic Chuck Taylor ankle patch</li>
