Completed css challenge #2

--- a/Course Project Sections/03-CSS-Fundamentals/component e-commerce store mini project/shoesComponent.html
+++ b/Course Project Sections/03-CSS-Fundamentals/component e-commerce store mini project/shoesComponent.html
@@ -8,36 +8,38 @@
     <title>Shoes</title>
   </head>
   <body>
-    <article class="product">
-      <header>
-        <h2>Converse Chuck Taylor All Star Low Top</h2>
-        <img
-          src="../img/challenges.jpg"
-          alt="Person wearing sneakers shoes"
-          width="250px"
-          height="250px"
-        />
-        <p><strong class="price">&#36;65.00</strong></p>
-      </header>
+    <div class="main-container">
+      <article class="product">
+        <header>
+          <h2>Converse Chuck Taylor All Star Low Top</h2>
+          <img
+            src="../img/challenges.jpg"
+            alt="Person wearing sneakers shoes"
+            width="250px"
+            height="250px"
+          />
+          <p><strong class="price">&#36;65.00</strong></p>
+        </header>
 
-      <p class="shipping">Free shipping</p>
-      <p>
-        Ready to dress up or down, these classic canvas Chucks are an everyday
-        wardrobe staple.
-      </p>
-      <a class="more-info" href="#">More information&rarr;</a>
+        <p class="shipping">Free shipping</p>
+        <p>
+          Ready to dress up or down, these classic canvas Chucks are an everyday
+          wardrobe staple.
+        </p>
+        <a class="more-info" href="#">More information&rarr;</a>
 
-      <aside>
-        <h3 class="details-title">Product details</h3>
+        <aside>
+          <h3 class="details-title">Product details</h3>
 
-        <ul class="details-list">
-          <li>Lightweight, durable canvas sneaker</li>
-          <li>Lightly padded footbed for added comfort</li>
-          <li>Iconic Chuck Taylor ankle patch</li>
-        </ul>
+          <ul class="details-list">
+            <li>Lightweight, durable canvas sneaker</li>
+            <li>Lightly padded footbed for added comfort</li>
+            <li>Iconic Chuck Taylor ankle patch</li>
+          </ul>
 
-        <button>Add to Cart</button>
-      </aside>
-    </article>
+          <button class="add-cart">Add to Cart</button>
+        </aside>
+      </article>
+    </div>
   </body>
 </html>
