Added absolutely positioned like button

--- a/Course Project Sections/03-CSS-Fundamentals/index.html
+++ b/Course Project Sections/03-CSS-Fundamentals/index.html
@@ -15,6 +15,7 @@
           <a href="#">Flexbox</a>
           <a href="#">CSS Grid</a>
         </nav>
+        <button class="like-button">Like ❤️</button>
       </header>
 
       <article>
