Completed challenge #3. Added pseudo element with content "sale",  color choices for shoes.

--- a/Course Project Sections/03-CSS-Fundamentals/component e-commerce store mini project/shoesComponent.html
+++ b/Course Project Sections/03-CSS-Fundamentals/component e-commerce store mini project/shoesComponent.html
@@ -28,6 +28,15 @@
         </p>
         <a class="more-info" href="#">More information&rarr;</a>
 
+        <div class="color-choices">
+          <div class="color"></div>
+          <div class="color color-blue" id="blue"></div>
+          <div class="color color-red"></div>
+          <div class="color color-orange"></div>
+          <div class="color color-green"></div>
+          <div class="color"></div>
+        </div>
+
         <aside>
           <h3 class="details-title">Product details</h3>
 
