Completed the web page layout using the float layout model.

--- a/Course Project Sections/04-CSS-Layouts/index.html
+++ b/Course Project Sections/04-CSS-Layouts/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="main-container">
-      <header class="main-header">
+      <header class="main-header clearfix">
         <h1>📘 The Code Magazine</h1>
 
         <nav>
@@ -16,8 +16,6 @@
           <a href="#">Flexbox</a>
           <a href="#">CSS Grid</a>
         </nav>
-
-        <div class="clear-float"></div>
 
         <button class="like-button">Like ❤️</button>
       </header>
