--- a/Course Project Sections/04-CSS-Layouts/component e-commerce store mini project/shoesComponent.html
+++ b/Course Project Sections/04-CSS-Layouts/component e-commerce store mini project/shoesComponent.html
@@ -8,41 +8,41 @@
     <title>Shoes</title>
   </head>
   <body>
-    <div class="main-container">
-      <article class="product">
-        <header>
-          <h2>Converse Chuck Taylor All Star Low Top</h2>
+    <article class="product">
+      <header>
+        <h2>Converse Chuck Taylor All Star Low Top</h2>
 
-          <div class="shoes-container">
-            <img
-              src="../img/challenges.jpg"
-              alt="Person wearing sneakers shoes"
-              width="250px"
-              height="250px"
-            />
-          </div>
-        </header>
-
-        <div class="product-container">
-          <p><strong class="price">&#36;65.00</strong></p>
-          <p class="shipping">Free shipping</p>
-          <p>
-            Ready to dress up or down, these classic canvas Chucks are an
-            everyday wardrobe staple.
-          </p>
-          <a class="more-info" href="#">More information&rarr;</a>
-
-          <div class="color-choices">
-            <div class="color"></div>
-            <div class="color color-blue" id="blue"></div>
-            <div class="color color-red"></div>
-            <div class="color color-orange"></div>
-            <div class="color color-green"></div>
-            <div class="color"></div>
-          </div>
+        <div class="img-container">
+          <img
+            src="../img/challenges.jpg"
+            alt="Person wearing sneakers shoes"
+            width="250px"
+            height="250px"
+          />
         </div>
+      </header>
 
-        <aside class="details-container">
+      <div class="product-info-container">
+        <p><strong class="price">&#36;65.00</strong></p>
+        <p class="shipping">Free shipping</p>
+        <p class="text-info">
+          Ready to dress up or down, these classic canvas Chucks are an everyday
+          wardrobe staple.
+        </p>
+        <a class="more-info" href="#">More information&rarr;</a>
+
+        <div class="color-choices">
+          <div class="color"></div>
+          <div class="color color-blue" id="blue"></div>
+          <div class="color color-red"></div>
+          <div class="color color-orange"></div>
+          <div class="color color-green"></div>
+          <div class="color"></div>
+        </div>
+      </div>
+
+      <aside>
+        <div class="product-details-container">
           <h3 class="details-title">Product details</h3>
 
           <ul class="details-list">
@@ -50,10 +50,10 @@
             <li>Lightly padded foot bed for added comfort</li>
             <li>Iconic Chuck Taylor ankle patch</li>
           </ul>
+        </div>
 
-          <button class="add-cart">Add to Cart</button>
-        </aside>
-      </article>
-    </div>
+        <button class="add-cart">Add to Cart</button>
+      </aside>
+    </article>
   </body>
 </html>
