Experimenting with flex property.

--- a/Course Project Sections/04-CSS-Layouts/flexbox.html
+++ b/Course Project Sections/04-CSS-Layouts/flexbox.html
@@ -59,6 +59,16 @@
         order: 1;
         align-self: stretch;
       }
+
+      .el {
+        /*Defaults
+        flex-grow: 0;
+        flex-shrink: 1;
+        flex-basis: auto;
+        */
+
+        flex: 1;
+      }
     </style>
   </head>
   <body>
