--- a/Course Project Sections/04-CSS-Layouts/component e-commerce store mini project/shoesComponent.html
+++ b/Course Project Sections/04-CSS-Layouts/component e-commerce store mini project/shoesComponent.html
@@ -11,7 +11,9 @@
     <article class="product">
       <header>
         <h2>Converse Chuck Taylor All Star Low Top</h2>
+      </header>
 
+      <div class="container">
         <div class="img-container">
           <img
             src="../img/challenges.jpg"
@@ -20,28 +22,28 @@
             height="250px"
           />
         </div>
-      </header>
 
-      <div class="product-info-container">
-        <p><strong class="price">&#36;65.00</strong></p>
-        <p class="shipping">Free shipping</p>
-        <p class="text-info">
-          Ready to dress up or down, these classic canvas Chucks are an everyday
-          wardrobe staple.
-        </p>
-        <a class="more-info" href="#">More information&rarr;</a>
+        <div class="product-info-container">
+          <div class="product-price">
+            <p><strong class="price">&#36;65.00</strong></p>
+            <p class="shipping">Free shipping</p>
+          </div>
+          <p class="text-info">
+            Ready to dress up or down, these classic canvas Chucks are an
+            everyday wardrobe staple.
+          </p>
+          <a class="more-info" href="#">More information&rarr;</a>
 
-        <div class="color-choices">
-          <div class="color"></div>
-          <div class="color color-blue" id="blue"></div>
-          <div class="color color-red"></div>
-          <div class="color color-orange"></div>
-          <div class="color color-green"></div>
-          <div class="color"></div>
+          <div class="color-choices">
+            <div class="color"></div>
+            <div class="color color-blue"></div>
+            <div class="color color-red"></div>
+            <div class="color color-orange"></div>
+            <div class="color color-green"></div>
+            <div class="color"></div>
+          </div>
         </div>
-      </div>
 
-      <aside>
         <div class="product-details-container">
           <h3 class="details-title">Product details</h3>
 
@@ -51,7 +53,9 @@
             <li>Iconic Chuck Taylor ankle patch</li>
           </ul>
         </div>
+      </div>
 
+      <aside>
         <button class="add-cart">Add to Cart</button>
       </aside>
     </article>
