--- a/Course Project Sections/04-CSS-Layouts/css-grid.html
+++ b/Course Project Sections/04-CSS-Layouts/css-grid.html
@@ -31,6 +31,15 @@
       .el--8 {
         background-color: crimson;
       }
+      .el--9 {
+        background-color: orange;
+      }
+      .el--10 {
+        background-color: whitesmoke;
+      }
+      .el--11 {
+        background-color: greenyellow;
+      }
 
       .container--1 {
         /* STARTER */
@@ -40,9 +49,13 @@
         margin: 40px;
 
         /* CSS GRID */
+        display: grid;
+        grid-template-columns: 200px 170px 250px 150px;
+        grid-template-rows: 200px 180px;
       }
 
       .container--2 {
+        display: none;
         /* STARTER */
         font-family: sans-serif;
         background-color: black;
@@ -66,6 +79,9 @@
       <div class="el el--6">(6) languages</div>
       <div class="el el--7">(7) to</div>
       <div class="el el--8">(8) learn</div>
+      <div class="el el--9">(9) hello world!</div>
+      <div class="el el--10">(10) software</div>
+      <div class="el el--11">(11) engendering and development</div>
     </div>
 
     <div class="container--2">
