--- a/Course Project Sections/04-CSS-Layouts/css-grid.html
+++ b/Course Project Sections/04-CSS-Layouts/css-grid.html
@@ -53,10 +53,24 @@
         /* grid-template-columns: 2fr 1fr 1fr 1fr; */
         /* grid-template-rows: 300px 200px; */
         grid-template-columns: repeat(4, 1fr);
-        height: 500px;
-        grid-template-rows: 1fr auto 3fr;
-        row-gap: 60px;
+        height: 800px;
+        grid-template-rows: 1fr 1fr 1fr;
+        row-gap: 40px;
         column-gap: 30px;
+      }
+
+      .el--8 {
+        grid-column: 2 / 3;
+        grid-row: 1 / 2;
+      }
+
+      .el--2 {
+        grid-column: 1 / 2;
+        grid-row: 2 / 3;
+      }
+
+      .el--5 {
+        grid-column: 2 / -1;
       }
 
       .container--2 {
