--- a/Course Project Sections/04-CSS-Layouts/component e-commerce store mini project/shoesComponent.html
+++ b/Course Project Sections/04-CSS-Layouts/component e-commerce store mini project/shoesComponent.html
@@ -13,47 +13,48 @@
         <h2>Converse Chuck Taylor All Star Low Top</h2>
       </header>
 
-      <div class="container">
-        <div class="img-container">
-          <img
-            src="../img/challenges.jpg"
-            alt="Person wearing sneakers shoes"
-            width="250px"
-            height="250px"
-          />
+      <!-- Needed for flexbox layout and ccs-grid solution 1 layout -->
+      <!-- <div class="container"> -->
+      <div class="img-container">
+        <img
+          src="../img/challenges.jpg"
+          alt="Person wearing sneakers shoes"
+          width="250px"
+          height="250px"
+        />
+      </div>
+
+      <div class="product-info-container">
+        <div class="product-price">
+          <p><strong class="price">&#36;65.00</strong></p>
+          <p class="shipping">Free shipping</p>
         </div>
+        <p class="text-info">
+          Ready to dress up or down, these classic canvas Chucks are an everyday
+          wardrobe staple.
+        </p>
+        <a class="more-info" href="#">More information&rarr;</a>
 
-        <div class="product-info-container">
-          <div class="product-price">
-            <p><strong class="price">&#36;65.00</strong></p>
-            <p class="shipping">Free shipping</p>
-          </div>
-          <p class="text-info">
-            Ready to dress up or down, these classic canvas Chucks are an
-            everyday wardrobe staple.
-          </p>
-          <a class="more-info" href="#">More information&rarr;</a>
-
-          <div class="color-choices">
-            <div class="color"></div>
-            <div class="color color-blue"></div>
-            <div class="color color-red"></div>
-            <div class="color color-orange"></div>
-            <div class="color color-green"></div>
-            <div class="color"></div>
-          </div>
-        </div>
-
-        <div class="product-details-container">
-          <h3 class="details-title">Product details</h3>
-
-          <ul class="details-list">
-            <li>Lightweight, durable canvas sneaker</li>
-            <li>Lightly padded foot bed for added comfort</li>
-            <li>Iconic Chuck Taylor ankle patch</li>
-          </ul>
+        <div class="color-choices">
+          <div class="color"></div>
+          <div class="color color-blue"></div>
+          <div class="color color-red"></div>
+          <div class="color color-orange"></div>
+          <div class="color color-green"></div>
+          <div class="color"></div>
         </div>
       </div>
+
+      <div class="product-details-container">
+        <h3 class="details-title">Product details</h3>
+
+        <ul class="details-list">
+          <li>Lightweight, durable canvas sneaker</li>
+          <li>Lightly padded foot bed for added comfort</li>
+          <li>Iconic Chuck Taylor ankle patch</li>
+        </ul>
+      </div>
+      <!-- </div> -->
 
       <aside>
         <button class="add-cart">Add to Cart</button>
