--- a/Course Project Sections/07-Omnifood-Desktop/index.html
+++ b/Course Project Sections/07-Omnifood-Desktop/index.html
@@ -15,61 +15,72 @@
     <title>Omnifood</title>
   </head>
   <body>
-    <section class="section-hero">
-      <div class="hero-container">
-        <div class="hero-text-box">
-          <h1 class="heading-primary">
-            A healthy meal delivered to your door, every single day
-          </h1>
-          <p class="hero-description">
-            The smart 365-days-per-year food subscription that will make you eat
-            healthy again. Tailored to your personal tastes and nutritional
-            needs.
-          </p>
-          <a href="#" class="btn btn--full margin-right-sm"
-            >Start eating well</a
-          >
-          <a href="#" class="btn btn--outline">Learn more &darr;</a>
-          <div class="delivered-meals">
-            <div class="delivered-imgs">
-              <img
-                src="content/img/customers/customer-1.jpg"
-                alt="Customer face photo"
-              />
-              <img
-                src="content/img/customers/customer-2.jpg"
-                alt="Customer face photo"
-              />
-              <img
-                src="content/img/customers/customer-3.jpg"
-                alt="Customer face photo"
-              />
-              <img
-                src="content/img/customers/customer-4.jpg"
-                alt="Customer face photo"
-              />
-              <img
-                src="content/img/customers/customer-5.jpg"
-                alt="Customer face photo"
-              />
-              <img
-                src="content/img/customers/customer-6.jpg"
-                alt="Customer face photo"
-              />
-            </div>
-            <p class="delivered-text">
-              <span>250,000+</span> meals delivered last year!
+    <header class="header">
+      <img
+        src="content/img/omnifood-logo.png"
+        alt="Omnifood logo"
+        class="logo"
+      />
+      <nav class="main-nav">Navigation</nav>
+    </header>
+
+    <main>
+      <section class="section-hero">
+        <div class="hero-container">
+          <div class="hero-text-box">
+            <h1 class="heading-primary">
+              A healthy meal delivered to your door, every single day
+            </h1>
+            <p class="hero-description">
+              The smart 365-days-per-year food subscription that will make you
+              eat healthy again. Tailored to your personal tastes and
+              nutritional needs.
             </p>
+            <a href="#" class="btn btn--full margin-right-sm"
+              >Start eating well</a
+            >
+            <a href="#" class="btn btn--outline">Learn more &darr;</a>
+            <div class="delivered-meals">
+              <div class="delivered-imgs">
+                <img
+                  src="content/img/customers/customer-1.jpg"
+                  alt="Customer face photo"
+                />
+                <img
+                  src="content/img/customers/customer-2.jpg"
+                  alt="Customer face photo"
+                />
+                <img
+                  src="content/img/customers/customer-3.jpg"
+                  alt="Customer face photo"
+                />
+                <img
+                  src="content/img/customers/customer-4.jpg"
+                  alt="Customer face photo"
+                />
+                <img
+                  src="content/img/customers/customer-5.jpg"
+                  alt="Customer face photo"
+                />
+                <img
+                  src="content/img/customers/customer-6.jpg"
+                  alt="Customer face photo"
+                />
+              </div>
+              <p class="delivered-text">
+                <span>250,000+</span> meals delivered last year!
+              </p>
+            </div>
+          </div>
+          <div class="hero-image-box">
+            <img
+              src="content/img/hero.png"
+              alt="Woman enjoying food, display of delicious food, meals in storage containers, food bows on a table"
+              class="hero-image"
+            />
           </div>
         </div>
-        <div class="hero-image-box">
-          <img
-            src="content/img/hero.png"
-            alt="Woman enjoying food, display of delicious food, meals in storage containers, food bows on a table"
-            class="hero-image"
-          />
-        </div>
-      </div>
-    </section>
+      </section>
+    </main>
   </body>
 </html>
