--- a/Course Project Sections/07-Omnifood-Desktop/index.html
+++ b/Course Project Sections/07-Omnifood-Desktop/index.html
@@ -21,7 +21,27 @@
         alt="Omnifood logo"
         class="logo"
       />
-      <nav class="main-nav">Navigation</nav>
+      <nav class="main-nav">
+        <ul class="main-nav-list">
+          <li>
+            <a href="#" class="main-nav-link" target="_blank">Section 1</a>
+          </li>
+          <li>
+            <a href="#" class="main-nav-link" target="_blank">Section 2</a>
+          </li>
+          <li>
+            <a href="#" class="main-nav-link" target="_blank">Section 3</a>
+          </li>
+          <li>
+            <a href="#" class="main-nav-link" target="_blank">Section 4</a>
+          </li>
+          <li>
+            <a href="#" class="main-nav-link nav-cta" target="_blank"
+              >Section 5</a
+            >
+          </li>
+        </ul>
+      </nav>
     </header>
 
     <main>
