Crafted a reusable css-grid.

--- a/Course Project Sections/07-Omnifood-Desktop/index.html
+++ b/Course Project Sections/07-Omnifood-Desktop/index.html
@@ -101,6 +101,15 @@
           </div>
         </div>
       </section>
+
+      <section class="section-how-works">
+        <div class="grid-reusable grid--reusable--2--cols container">
+          <div>Test 1</div>
+          <div>Test 2</div>
+          <div>Test 3</div>
+          <div>Test 4</div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
