--- a/Course Project Sections/07-Omnifood-Desktop/index.html
+++ b/Course Project Sections/07-Omnifood-Desktop/index.html
@@ -103,6 +103,25 @@
         </div>
       </section>
 
+      <section class="section-featured">
+        <div class="container">
+          <h2 class="heading-featured-in">As featured in</h2>
+          <div class="logos">
+            <img src="content/img/logos/techcrunch.png" alt="Techcrunch logo" />
+            <img
+              src="content/img/logos/business-insider.png"
+              alt="Business-insider logo"
+            />
+            <img
+              src="content/img/logos/the-new-york-times.png"
+              alt="The New York Times logo"
+            />
+            <img src="content/img/logos/forbes.png" alt="Forbes logo" />
+            <img src="content/img/logos/usa-today.png" alt="USA Today logo" />
+          </div>
+        </div>
+      </section>
+
       <section class="section-how-works">
         <div class="container">
           <span class="subheading">How it works</span>
