Completed Call To Action Section.

--- a/Course Project Sections/07-Omnifood-Desktop/index.html
+++ b/Course Project Sections/07-Omnifood-Desktop/index.html
@@ -620,8 +620,8 @@
                   <label for="select-where">Where did you hear from us?</label>
                   <select id="select-where" required>
                     <option value="">Please choose an option</option>
-                    <option value="Friends">Friends</option>
                     <option value="Family">Family</option>
+                    <option value="Friends">Friends</option>
                     <option value="Social Media">Social Media</option>
                     <option value="YouTube">YouTube</option>
                     <option value="TikTok">TikTok</option>
@@ -633,7 +633,7 @@
                   </select>
                 </div>
 
-                <button class="btn">Sing up now!</button>
+                <button class="btn btn--form">Sing up now!</button>
               </form>
             </div>
             <div
