--- a/Course Project Sections/08-Omnifood-Responsive/index.html
+++ b/Course Project Sections/08-Omnifood-Responsive/index.html
@@ -27,7 +27,7 @@
     <title>Omnifood</title>
   </head>
   <body>
-    <header class="header">
+    <header class="header nav-open">
       <a href="#">
         <img
           src="content/img/omnifood-logo.png"
@@ -56,6 +56,11 @@
           </li>
         </ul>
       </nav>
+
+      <button class="btn-mobile-nav">
+        <ion-icon class="icon-mobile-nav" name="menu-outline"></ion-icon>
+        <ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
+      </button>
     </header>
 
     <main>
