Added a media query for smaller tablets.

--- a/Course Project Sections/08-Omnifood-Responsive/index.html
+++ b/Course Project Sections/08-Omnifood-Responsive/index.html
@@ -27,7 +27,8 @@
     <title>Omnifood</title>
   </head>
   <body>
-    <header class="header nav-open">
+    <!-- nav-open class -->
+    <header class="header">
       <a href="#">
         <img
           src="content/img/omnifood-logo.png"
@@ -655,7 +656,7 @@
     </main>
 
     <footer class="footer">
-      <div class="container grid grid grid-footer">
+      <div class="container grid grid grid--footer">
         <div class="logo-col">
           <a href="#" class="footer-logo">
             <img
