Implemented smooth scrolling.

--- a/Course Project Sections/09-Omnifood-Optimizations/index.html
+++ b/Course Project Sections/09-Omnifood-Optimizations/index.html
@@ -24,6 +24,11 @@
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
 
+    <script
+      defer
+      src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"
+    ></script>
+
     <script defer src="js/script.js"></script>
 
     <title>Omnifood</title>
@@ -41,21 +46,19 @@
       <nav class="main-nav">
         <ul class="main-nav-list">
           <li>
-            <a href="#" class="main-nav-link" target="_blank">How it works</a>
+            <a href="#how-it-works-id" class="main-nav-link">How it works</a>
           </li>
           <li>
-            <a href="#" class="main-nav-link" target="_blank">Meals</a>
+            <a href="#meals-id" class="main-nav-link">Meals</a>
           </li>
           <li>
-            <a href="#" class="main-nav-link" target="_blank">Testimonials</a>
+            <a href="#testimonials-id" class="main-nav-link">Testimonials</a>
           </li>
           <li>
-            <a href="#" class="main-nav-link" target="_blank">Pricing</a>
+            <a href="#pricing-plan-id" class="main-nav-link">Pricing</a>
           </li>
           <li>
-            <a href="#" class="main-nav-link nav-cta" target="_blank"
-              >Try for free</a
-            >
+            <a href="#cta-id" class="main-nav-link nav-cta">Try for free</a>
           </li>
         </ul>
       </nav>
@@ -67,7 +70,7 @@
     </header>
 
     <main>
-      <section class="section-hero">
+      <section id="hero-id" class="section-hero">
         <div class="hero-container">
           <div class="hero-text-box">
             <h1 class="heading-primary">
@@ -78,10 +81,12 @@
               eat healthy again. Tailored to your personal tastes and
               nutritional needs.
             </p>
-            <a href="#" class="btn btn--full margin-right-sm"
+            <a href="#cta-id" class="btn btn--full margin-right-sm"
               >Start eating well</a
             >
-            <a href="#" class="btn btn--outline">Learn more &darr;</a>
+            <a href="#how-it-works-id" class="btn btn--outline"
+              >Learn more &darr;</a
+            >
             <div class="delivered-meals">
               <div class="delivered-imgs">
                 <img
@@ -143,7 +148,7 @@
         </div>
       </section>
 
-      <section class="section-how-works">
+      <section id="how-it-works-id" class="section-how-works">
         <div class="container">
           <span class="subheading">How it works</span>
           <h2 class="heading-secondary">
@@ -214,7 +219,7 @@
         </div>
       </section>
 
-      <section class="section-meals">
+      <section id="meals-id" class="section-meals">
         <div class="container center-text">
           <span class="subheading">Meals</span>
           <h2 class="heading-secondary">
@@ -334,7 +339,7 @@
         </div>
       </section>
 
-      <section class="section-testimonials">
+      <section id="testimonials-id" class="section-testimonials">
         <div class="testimonials-container">
           <span class="subheading">Testimonials</span>
           <h2 class="heading-secondary">Once you try it you can't go back!</h2>
@@ -482,7 +487,7 @@
         </div>
       </section>
 
-      <section class="section-pricing">
+      <section id="pricing-plan-id" class="section-pricing">
         <div class="container">
           <span class="subheading">Pricing</span>
           <h2 class="heading-secondary">Eating well in an inexpensive way!</h2>
@@ -514,7 +519,7 @@
             </ul>
 
             <div class="plan-sing-up">
-              <a href="#" class="btn btn--full margin-right-sm"
+              <a href="#cta-id" class="btn btn--full margin-right-sm"
                 >Start eating well</a
               >
             </div>
@@ -596,7 +601,7 @@
         </div>
       </section>
 
-      <section class="section-cta">
+      <section id="cta-id" class="section-cta">
         <div class="container">
           <div class="cta">
             <div class="cta-text-box">
