--- a/Course Project Sections/09-Omnifood-Optimizations/index.html
+++ b/Course Project Sections/09-Omnifood-Optimizations/index.html
@@ -9,6 +9,14 @@
       content="Omnifood is an AI-powered food subscription that will make you eat healthy again 365 days per year.
               It's tailored to your personal tastes and needs. It encompasses all dietary needs."
     />
+    <link rel="icon" href="content/img/favicon/favicon64x64 desktop.png" />
+    <!-- iOS touch favicon -->
+    <link
+      rel="apple-touch-icon"
+      href="content/img/favicon/apple-touch-icon 180x180.png"
+    />
+    <!-- Android touch favicon -->
+    <link rel="manifest" href="manifest.webmanifest" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
