Replaced hero.png with resized format.

--- a/Course Project Sections/09-Omnifood-Optimizations/index.html
+++ b/Course Project Sections/09-Omnifood-Optimizations/index.html
@@ -135,7 +135,7 @@
           </div>
           <div class="hero-image-box">
             <img
-              src="content/img/hero.png"
+              src="content/img/hero1200x1184.png"
               alt="Woman enjoying food, display of delicious food, meals in storage containers, food bows on a table"
               class="hero-image"
             />
