Fixed anchor tag issues.

--- a/Course Project Sections/09-Omnifood-Optimizations/index.html
+++ b/Course Project Sections/09-Omnifood-Optimizations/index.html
@@ -570,7 +570,7 @@
             </ul>
 
             <div class="plan-sing-up">
-              <a href="#" class="btn btn--full margin-right-sm"
+              <a href="#cta-id" class="btn btn--full margin-right-sm"
                 >Start eating well</a
               >
             </div>
@@ -731,7 +731,7 @@
         <nav class="nav-col">
           <p class="footer-heading">Account</p>
           <ul class="footer-nav">
-            <li><a class="footer-link" href="#">Create Account</a></li>
+            <li><a class="footer-link" href="#cta-id">Create Account</a></li>
             <li><a class="footer-link" href="#">Sing in</a></li>
             <li><a class="footer-link" href="#">iOS app</a></li>
             <li><a class="footer-link" href="#">Android app</a></li>
